name:                yesod-twofactor-auth
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sbditto85/yesod-twofactor-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Casey Allred
maintainer:          sbditto85@gmail.com
copyright:           2017 Casey Allred
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yesod.TwoFactorAuth
  other-modules:       Yesod.TwoFactorAuth.Core
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base                    >= 4.7 && < 5
                     , classy-prelude-yesod
                     , yesod-auth
                     , yesod-core
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sbditto85/yesod-twofactor-auth
